--- a/components/_containers.scss
+++ b/components/_containers.scss
@@ -15,7 +15,7 @@
     // Responsive containers that are 100% wide until a breakpoint
     @each $breakpoint, $container-max-width in $container-max-widths
     {
-        @include media-breakpoint-up($name, $breakpoint: $grid-breakpoints)
+        @include media-breakpoint-up($name, $breakpoints: $grid-breakpoints)
         {
             // Extend each breakpoint which is smaller or equal to the current breakpoint
             $extend-breakpoint: true;
