--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
-/* Error: expected selector.
- *    ,
- * 31 |                     .container-$name{
- *    |                                ^
- *    '
- *   components/_containers.scss 31:32         @content
- *   tools/mixins/_media-breakpoint.scss 13:5  media-breakpoint-up()
- *   components/_containers.scss 18:9          @import
- *   components.scss 7:3                       @import
- *   style.scss 15:3                           root stylesheet */
+/* Error: (xs: xs, sm: sm, md: md, lg: lg, xl: xl, xxl: xxl) isn't a valid CSS value.
+ *     ,
+ * 113 | $infix: breakpoint-infix($breakpoints, $grid-breakpoint);
+ *     |                                        ^^^^^^^^^^^^^^^^
+ *     '
+ *   variables/spacings/_grid.scss 113:40  @import
+ *   variables/_spacing.scss 25:9          @import
+ *   variables/_variables.scss 20:3        @import
+ *   style.scss 3:9                        root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -17,5 +16,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: expected selector.\a    \2577 \a 31 \2502                      .container-$name{\a    \2502                                 ^\a    \2575 \a   components/_containers.scss 31:32         @content\a   tools/mixins/_media-breakpoint.scss 13:5  media-breakpoint-up()\a   components/_containers.scss 18:9          @import\a   components.scss 7:3                       @import\a   style.scss 15:3                           root stylesheet";
+  content: "Error: (xs: xs, sm: sm, md: md, lg: lg, xl: xl, xxl: xxl) isn't a valid CSS value.\a     \2577 \a 113 \2502  $infix: breakpoint-infix($breakpoints, $grid-breakpoint);\a     \2502                                         ^^^^^^^^^^^^^^^^\a     \2575 \a   variables/spacings/_grid.scss 113:40  @import\a   variables/_spacing.scss 25:9          @import\a   variables/_variables.scss 20:3        @import\a   style.scss 3:9                        root stylesheet";
 }
